# APT

./: .gitignore  README.md  apt_hooked_transformer.py  apt_tokenizer.py  apt_train.py  apt_train_2digits.py  apt_train_3digits.py  arithmetic_pretrained_transformer.py  arithmetic_tokenizer.py  bertviz_experiments.py  fun_with_manim.ipynb  fun_with_matrices.ipynb  play.ipynb  pyproject.toml  requirements.txt  run_audio_classification.py  spt_train.py  sum_pretrained_transformer.py
apt_checkpoints/base/: 6_1_3_32_600efinalized_model_bos_is_False.sav  6_1_3_32_800_e.pt  finalized_model.sav  finalized_model_bos_is_False.pt  finalized_model_bos_is_False.sav
datasets/: sum_dataset_no_bos_no_eos.json
datasets/no_bos_no_eos/: 100by100.json
exploration_notebooks/: fun_with_manim.ipynb  fun_with_matrices.ipynb  mlp_animated.ipynb  more_intuitions_for_APT.ipynb  play.ipynb
logs/: 18.12.25_2h_run.txt
random_pickles/: x.sav
src/: arithmetic_pretrained_transformer.py  async_realtime_plots.py  evaluation.py
tokenizer_variations/: sum_0-9_vocab.json  sum_0-9_vocab_no_bos_no_eos.json
