[project]
name = "apt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.1.0",
    "filelock==3.16.1",
    "fsspec==2024.9.0",
    "grpcio==1.66.2",
    "jinja2==3.1.4",
    "markdown==3.7",
    "markupsafe==3.0.1",
    "matplotlib>=3.10.8",
    "mpmath==1.3.0",
    "nbformat>=5.10.4",
    "networkx==3.3",
    "numpy==2.1.2",
    "packaging==24.1",
    "plotly>=6.5.0",
    "protobuf==5.28.2",
    "seaborn>=0.13.2",
    "setuptools==75.1.0",
    "six==1.16.0",
    "sympy==1.13.3",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "torch==2.4.1",
    "tqdm==4.66.5",
    "transformers>=4.57.3",
    "typing-extensions==4.12.2",
    "werkzeug==3.0.4",
]
